--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,3 +1,5 @@
+@plugin "daisyui";
+
 body{
     margin: 0;
     font-family: "Albert Sans", sans-serif;
@@ -416,15 +418,79 @@ body.dont_scroll{
     align-self: center;
 }
 .profile_pic{
+    min-width:640px;
     text-align: center;
-    align-self: center;
+    align-self:last baseline;
 }
 .profile_pic img{
-    width: 68%;
+    width:75%;
   -webkit-filter: drop-shadow(5px 5px 5px #111111);
-  filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 0px 15px #242323);
+}
+.random_message{
+    display: none;
+    position: absolute;
+    background-color: aliceblue;
+    margin: 0 auto 5px;
+    padding: 0.7rem;
+    text-align:center;
+    width: 200px;
+    border-radius: 6px;
+    color: rgb(0, 0, 0);
+    font-weight: 500;
+    top: 30%;
+    left: 35%;
+    box-shadow: 0 4px 6px rgba(0,0,0,2);
+}
+
+/* just a arrow  of chat bubble */
+.sb1:before{
+    content:"";
+    border-left: 24px solid #fff;
+  border-right: 12px solid transparent;
+  border-top: 12px solid transparent;
+  border-bottom: 20px solid transparent;
+  position: absolute;
+  top: 70%;
+}
+
+
+
+
+
+.profile_detailme h4{
+    width: 70%;
+    color: rgb(200, 198, 198);
+    font-weight: 500;
 }
  
+.button-to-nav_about{
+margin-top: 3.5rem;
+
+}
+
+.button-to-nav_about a{
+    background-color: #ff4d00;
+    padding-top: 1.4rem;
+    padding-bottom: 1.4rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 6px;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+}
+
+.button-to-nav_about a:hover{
+    background-color: #222;
+}
+.button-to-nav_about i{
+    letter-spacing: 2rem;
+}
+
 @media(max-width: 1500px){
     
 }
@@ -449,11 +515,10 @@ body.dont_scroll{
 }
 
 
-/* .ClickMe{
-    text-align: center;
+.ClickMe{
+    margin-top: 4rem;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    text-align: center;
     column-gap: 1.5rem;
 }
 .visit_nav h3{
@@ -466,7 +531,7 @@ body.dont_scroll{
 .logo:hover{
     color: #ff4d00;
     transition: 1s;
-} */
+}
 
 
 
@@ -513,8 +578,6 @@ body.dont_scroll{
     margin-right: auto;  
 }
 .inside_proj_1{
-    display: flex;
-    flex-direction: column;
     justify-content: center;
 }
 .myproj_img{
@@ -536,8 +599,9 @@ body.dont_scroll{
     border-color: rgb(255, 106, 0);
     border-width: 0.9rem;
     border-radius: 6px;
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    text-align: center;
+    
 }
 .myproj_img1 h2{
     color: rgb(68, 68, 68);
@@ -692,14 +756,14 @@ body.dont_scroll{
 }
 
 .contact_text{
-    margin-top: 2.5rem;
+    margin-top: 1rem;
 }
 .contact_text p{
     font-size: 1.3rem;
 }
 
 .form_input{
-    margin-top: 2.5rem;
+    margin-top: 1rem;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -810,28 +874,52 @@ body.dont_scroll{
     color: aliceblue;
 }
 
-/* Laptop */
-@media(max-width: 1024px){
-.spaces{
-    height: 130px;
-}
 
-
-.nav_bar{
-    padding-top: 1.2rem;
-    padding-bottom: 1.2rem;
-}
-
-
-}
 
 /* Mobile */
+@media(max-width: 1000px){
+    
+    .inside_container_1{
+        display: grid;
+        row-gap: 0.2rem;
+    }
+    .profile_pic{
+        margin-top: -0.5rem;
+        min-width: 1rem;
+        margin-bottom: 0;
+    }
+    .profile_pic img{
+        margin-top: 1rem;
+        border-radius: 25rem;
+        border: solid grey;
+        width: 14rem;
+        justify-content: center;
+    }
+    .profile_detailme{
+        text-align: center;
+    }
+    .name_me{
+        justify-content: center;
+    }
+    .profile_detailme h4{
+        width: 100%;
+    }
+    .ClickMe{
+        justify-content: center;
+    }
+    .random_message{
+        top: 10rem;
+    }
+
+}
 
 @media(max-width: 768px){
     /* Container_1 mobile version */
+    
+
 
     #title_project{
-        height: 13rem;
+        height: 5rem;
     }
     
     .koma h2{
