--- a/mainstyle.css
+++ b/mainstyle.css
@@ -958,7 +958,7 @@ margin-top: 3.5rem;
 @media(min-width: 1000px){
     
     #nav_id{
-        padding: 2000px 10px;
+        
     }
     .profile_pic{
         min-width: 480px;
@@ -969,6 +969,8 @@ margin-top: 3.5rem;
     .profile_pic img{
         width: 60%;
     }
+
+    .profile_detailme{}
 
 }
 
