--- a/mainstyle.css
+++ b/mainstyle.css
@@ -955,8 +955,7 @@ margin-top: 3.5rem;
 
 
 /* Laptop */
-@media(min-width: 1024px)and
-(max-width: 1272px){
+@media only screen and (min-width: 1272px){
     
     #nav_id{
         
