--- a/mainstyle.css
+++ b/mainstyle.css
@@ -955,8 +955,16 @@ margin-top: 3.5rem;
 
 
 /* Laptop */
-@media(max-width: 1024px){
-    
+@media screen and (min-width: 1024px) and (max-width: 1272px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi){
+ 
+    .profile_pic{
+        min-width: 480px;
+    }
+
+    .profile_pic img{
+        width: 60%;
+    }
+
 }
 
 
