--- a/mainstyle.css
+++ b/mainstyle.css
@@ -10,8 +10,8 @@ body{
 .nav_bar{
     width: 100%;
     height: 7vh;
-    padding: 40px 10px;
-    background-color: rgb(67, 68, 68);
+    
+    background-color: rgb(72, 92, 92);
     display: flex;
     justify-content: end;
     align-items: center;
@@ -22,6 +22,7 @@ body{
 
 #nav_id{
     transition: 0.4s;
+    padding: 30px 10px;
 }
 
 .inside_navbar{ 
@@ -56,14 +57,29 @@ body{
 }
 
 
-
+#smallbox{
+    padding: 10px 25px;
+    transition: 0.4s;
+}
+#smallbox1{
+    padding: 10px 25px;
+    transition: 0.4s;
+}
+#smallbox2{
+    padding: 10px 25px;
+    transition: 0.4s;
+}
+#smallbox3{
+    padding: 10px 25px;
+    transition: 0.4s;
+}
 
 
 a.boxs1{
     justify-content: center;
     text-align: center;
     display: inline-block;
-    padding: 14px 28px;
+    
     width: 125px;
     background: orangered;
     color: white;
@@ -955,7 +971,7 @@ margin-top: 3.5rem;
 
 
 /* Laptop */
-@media screen and (min-width: 1024px) and (max-width: 1272px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi){
+@media screen and (min-width: 994px) and (max-width: 1272px) and (-webkit-min-device-pixel-ratio: 1) and (min-resolution: 102dpi){
  
     .profile_pic{
         min-width: 481px;
