css for laptop responsive

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -986,45 +986,7 @@ margin-top: 3.5rem;
 
 
 
-/* Laptop */
-@media screen and (min-width: 994px) and (max-width: 1272px) and (-webkit-min-device-pixel-ratio: 1) and (min-resolution: 102dpi){
- 
-    .profile_pic{
-        min-width: 470px;
-    }
 
-    .profile_pic img{
-        width: 70%;
-    }
-    .profile_detailme{
-        margin-top: 2.5rem;
-    }
-    .name_me h2{
-        font-size: 2.1rem;
-    }
-    .profile_detailme h3{
-        font-size: 1rem;
-    }
-    .profile_detailme h4{
-        width: 80%;
-        color: rgb(200, 198, 198);
-        font-weight: 400;
-    }
-    .button-to-nav_about{
-        margin-top: 2rem;
-    }
-    .button-to-nav_about a{
-        padding-left: 1.3rem;
-        padding-right: 1.3rem;
-        padding-top: 1.3rem;
-        padding-bottom: 1.3rem;
-    }
-
-    .ClickMe{
-        margin-top: 2.5rem;
-    }
-
-}
 
 
 /* Mobile */
@@ -1190,4 +1152,143 @@ margin-top: 3.5rem;
     .nav_pic h2{
         font-size: 2rem;
     }
+}
+
+
+/* Laptop */
+@media screen and (min-width: 200px) and (max-width: 1272px) and (-webkit-min-device-pixel-ratio: 1) and (min-resolution: 102dpi){
+ 
+    .profile_pic{
+        min-width: 470px;
+    }
+
+    .profile_pic img{
+        width: 70%;
+    }
+    .profile_detailme{
+        margin-top: 2.5rem;
+    }
+    .name_me h2{
+        font-size: 2.1rem;
+    }
+    .profile_detailme h3{
+        font-size: 1rem;
+    }
+    .profile_detailme h4{
+        width: 80%;
+        color: rgb(200, 198, 198);
+        font-weight: 400;
+    }
+    .button-to-nav_about{
+        margin-top: 2rem;
+    }
+    .button-to-nav_about a{
+        padding-left: 1.3rem;
+        padding-right: 1.3rem;
+        padding-top: 1.3rem;
+        padding-bottom: 1.3rem;
+    }
+
+    .ClickMe{
+        margin-top: 2.5rem;
+    }
+
+    /* Nav_pic */
+    .nav_body{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav_pic{
+        align-self: center;
+    }
+
+    .nav_pic img{
+        width: 12rem;
+    }
+    .nav_pic h2{
+        font-size: 2rem;
+    }
+
+    .nav_to_contactme{
+        margin-top: 1rem;
+    }
+
+    .nav_to_contactme a{
+        font-size: 1.5rem;
+    }
+    /* ---for laptop woking only---- */
+    @media screen and (min-width: 200px) and (max-width: 1000px) and (-webkit-min-device-pixel-ratio: 1) and (min-resolution: 102dpi){
+        .inside_container_1{
+        display: grid;
+        row-gap: 0.2rem;
+    }
+    .profile_pic{
+        min-width: 1rem;
+        margin-bottom: 0;
+    }
+    .profile_pic img{
+        margin-top: 1rem;
+        border-radius: 25rem;
+        border: solid grey;
+        width: 10rem;
+        justify-content: center;
+        margin-bottom: 0;
+    }
+    .profile_detailme{
+        align-self: first baseline;
+        text-align: center;
+        margin-top: 0;
+    }
+    .name_me{
+        justify-content: center;
+    }
+    .name_me h2{
+        font-size: 2rem;
+    }
+    .profile_detailme h4{
+        width: 100%;
+    }
+    .ClickMe{
+        justify-content: center;
+    }
+    .random_message{
+        top: 10rem;
+    }
+    
+    .button-to-nav_about{
+        margin-top: 1.5rem;
+    }
+    .button-to-nav_about a{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+    .ClickMe{
+        margin-top: 2rem;
+    }
+
+    .nav_body{
+        height: 100vh;
+        display: grid;
+    }
+    .nav_pic{
+        margin-top: 3rem;
+        align-self: center;
+    }
+    .nav_pic img{
+        width: 10rem;
+    }
+    .nav_pic h2{
+        font-size: 1.5rem;
+    }
+    .nav_to_contactme{
+         margin-top: 1rem;
+    }
+    .nav_to_contactme a{
+        font-size: 1.2rem;
+    }
+    }
+
+
 }
